# postgres-index-cache

./: Cargo.toml  LISTEN_NOTIFY_EXAMPLE.md  README.md  docker-compose.yml
.github/workflows/: rust-ci.yml  security-audit.yml
.roo/commands/: cm.md
cleanup/: cleanup_cache_notification_triggers.sql
sql/: cache_notification_triggers.sql
src/: cache.rs  db_init.rs  error.rs  index_cache.rs  lib.rs  listener.rs  main_model_cache.rs  traits.rs  transaction_aware_cache.rs  transaction_aware_index_cache.rs  transaction_aware_main_model_cache.rs
tests/: cache_test.rs  db_trigger_test.rs  listener_test.rs
tests/cleanup/: cleanup_cache_notification_triggers_examples.sql
tests/common/: entities.rs  mod.rs  repositories.rs
tests/migrations/: cache_notification_triggers_examples.sql
