[package]
name = "postgres-index-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
parking_lot = "0.12"
postgres-unit-of-work = { path = "../postgres-unit-of-work" }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }