[package]
name = "postgres-index-cache"
version = "0.1.0"
edition = "2021"
include = [
    "src/**/*",
    "sql/**/*.sql",
    "cleanup/**/*.sql",
    "Cargo.toml",
    "README.md",
    "LISTEN_NOTIFY_EXAMPLE.md"
]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
postgres-unit-of-work = { git = "https://github.com/ADORSYS-GIS/postgres-unit-of-work", branch = "master" }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-postgres = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "macros"], default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
twox-hash = "1.6"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "macros"], default-features = false }
serial_test = "3.0"

[features]
default = ["sqlx-listener"]
sqlx-listener = ["sqlx"]

[[test]]
name = "db_trigger_test"
required-features = ["sqlx-listener"]